--- a/src/Strings.resx
+++ b/src/Strings.resx
@@ -129,6 +129,9 @@
   <data name="CannotNullOrEmpty" xml:space="preserve">
     <value>The value cannot be null or empty.</value>
   </data>
+  <data name="InvalidVersion" xml:space="preserve">
+    <value>The provided version string is invalid.</value>
+  </data>
   <data name="UncomparableType" xml:space="preserve">
     <value>Type "{0}" does not implement IComparable&lt;{0}&gt; or IComparable.</value>
   </data>
